# studybuddy

./: .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  TESTING.md  VERCEL_ENV_SETUP.md  vercel.json
backend/: auth.py  chunking.py  database.py  db.py  env.example  gencards.txt  import_pdf.py  import_txt.py  init_db.py  main.py  pyproject.toml  requirements.txt  test_db.py
frontend/: env.example  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/api/: hooks.ts  index.ts
frontend/src/components/: FlashcardList.tsx  FlashcardPlayer.tsx  LocalCardCreator.tsx  LoginForm.tsx  Navigation.tsx  RegisterForm.tsx  SelectSubjectTest.tsx
frontend/src/components/ui/: table.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CreateCards.tsx  StudyPage.tsx  UploadPDF.tsx
